# synthdata

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/presidio/: PRESIDIO_APP_GUIDE.md  QUICK_START_GUIDE.md  presidio_helpers.py  presidio_nlp_engine_config.py  presidio_streamlit.py  requirements.txt  setup_models.py
apps/presidio/.streamlit/: config.toml
configs/: config.yaml
models/: adult_ctgan_losses.json  adult_dragan_losses.json  adult_dragan_model.pkl  adult_wgangp_losses.json  adult_wgangp_model.pkl
notebooks/: ctgan_hpo_hepatitis.ipynb  tabpfn_demo.ipynb  test_hepatitis_data.ipynb  ydata-test.py
scripts/: docparser.py  markdown_parser.py  run_evaluation.py  run_generation.py  run_imputation.py  run_plots.py  section_loader.py
scripts/document_pipeline/: NER.py  markdown_parser.py
synthdata/: __init__.py  config.py  data.py  experiment.py  imputation.py  utils.py
synthdata/evaluation/: __init__.py  catalog.py  combine.py  custom_eval.py  synthcity_eval.py  syntheval_eval.py
synthdata/generation/: __init__.py  hpo.py  pipeline.py  synthcity_backend.py  tabpfgen_backend.py  tabpfn_backend.py
synthdata/imputation/: __init__.py  pipeline.py  refidiff_backend.py  tabimpute_backend.py
synthdata/log_disparity/: metric_log_disparity.py
synthdata/plotting/: __init__.py  data_plots.py  evaluation_plots.py  generation_plots.py  imputation_plots.py
tests/: conftest.py
tests/unit/: test_config.py  test_custom_eval.py  test_data.py  test_evaluation_catalog.py  test_evaluation_combine.py  test_experiment.py  test_imputation_refidiff.py  test_log_disparity_metrics.py
