[project]
name = "synthdata"
version = "0.1.0"
description = "Sandbox for synthetic data generation and evaluation"
authors = [
    {name = "Alp Erkent", email = "alp.erkent@childmind.org"},
]
license = "MIT"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "altair",
    "jupyter",
    "marimo",
    "numpy",
    "pandas",
    "openpyxl",
    "pyarrow",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",
    "syntheval",
    "synthcity",
    "ucimlrepo",
    "optuna",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[project.scripts]
synthdata-impute = "scripts.run_imputation:main"
synthdata-generate = "scripts.run_generation:main"
synthdata-evaluate = "scripts.run_evaluation:main"
synthdata-plot = "scripts.run_plots:main"

[project.optional-dependencies]
presidio = [
    "presidio-analyzer[transformers,stanza,gliner]",
    "presidio-anonymizer",
    "streamlit",
    "streamlit-tags",
    "st-annotated-text",
    "python-dotenv",
    "flair",
]
ydata = [
    "markdown-analysis",
    "requests",
    "pyyaml",
    "openai",
    "sdv",
    "ydata-synthetic==1.4.0",
]

tabpfn = [
    "tabpfgen",
    "tabpfn",
    "tabpfn-extensions[unsupervised]==0.4.2",
    "tabimpute",
]

[tool.uv]
override-dependencies = [
    "scikit-learn==1.9.0",
    "tabpfn==8.0.8",
]

conflicts = [
    [
        { extra = "ydata" },
        { extra = "tabpfn" },
    ],
]

[tool.uv.sources]
syntheval = { path = "submodules/syntheval", editable = true }
synthcity = { path = "submodules/synthcity", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pyright]
reportInvalidTypeForm = "none"
reportUnusedExpression = "none"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "synthdata"]
