[project]
name = "synthdata"
version = "0.1.0"
description = "Sandbox for synthetic data generation and evaluation"
authors = [
    {name = "Alp Erkent", email = "alp.erkent@childmind.org"},
]
license = "MIT"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "altair",
    "jupyter",
    "marimo",
    "numpy",
    "pandas",
    "openpyxl",
    "pyarrow",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",
    "syntheval",
    "synthcity",
    "ucimlrepo",
    "optuna",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[project.scripts]
synthdata-impute = "scripts.run_imputation:main"
synthdata-generate = "scripts.run_generation:main"
synthdata-evaluate = "scripts.run_evaluation:main"
synthdata-plot = "scripts.run_plots:main"

[project.optional-dependencies]
presidio = [
    "presidio-analyzer[transformers,stanza,gliner]",
    "presidio-anonymizer",
    "streamlit",
    "streamlit-tags",
    "st-annotated-text",
    "python-dotenv",
    "flair",
]
ydata = [
    "markdown-analysis",
    "requests",
    "pyyaml",
    "openai",
    "sdv",
    "ydata-synthetic==1.4.0",
]

tabpfn = [
    "tabpfgen",
    "tabpfn",
    "tabpfn-extensions[unsupervised]",
    "tabimpute",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
]

[tool.uv]
override-dependencies = [
    "scikit-learn==1.9.0",
    "tabpfn==8.0.8",
]

conflicts = [
    [
        { extra = "ydata" },
        { extra = "tabpfn" },
    ],
]

[tool.uv.sources]
syntheval = { path = "submodules/syntheval", editable = true }
synthcity = { path = "submodules/synthcity", editable = true }
tabpfn-extensions = { git = "https://github.com/PriorLabs/tabpfn-extensions", branch = "main" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pyright]
reportInvalidTypeForm = "none"
reportUnusedExpression = "none"

[tool.ruff]
target-version = "py311"
line-length = 100
# Scope linting to the synthdata pipeline itself: the package, its CLI
# entrypoints, and its tests. `include` only affects directory *discovery*
# (e.g. plain `ruff check .`) -- it has no effect on files passed explicitly
# on the command line (as pre-commit does), so apps/, notebooks/,
# scripts/document_pipeline/, and submodules/ (vendored syntheval/synthcity)
# must also be listed in `extend-exclude` below to stay out of scope in both
# invocation styles.
include = ["synthdata/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
extend-exclude = ["scripts/document_pipeline", "apps", "notebooks", "submodules"]
# pre-commit passes explicit file paths on the command line, which ruff
# otherwise always lints regardless of exclude/extend-exclude (force-exclude
# defaults to false). Without this, `pre-commit run` would lint apps/,
# notebooks/, and scripts/document_pipeline/ despite the excludes above.
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "SIM"]
ignore = [
    "E501",  # line length is handled by the formatter, not the linter
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, pure-logic tests with no I/O or external dependencies",
    "cache: tests exercising file/SQLite caching and resumability logic",
    "integration: multi-module orchestration tests (may use tmp_path, mocks)",
    "slow: exercises real model training (synthcity/tabpfgen/tabpfn); not run by default in CI",
    "network: requires a live external/hosted API (e.g. hosted TabPFN); skipped in CI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "synthdata"]
